# xtra-backend

./: .gitignore  .gitmodules  README.md  cabal.project
XtraServer/: XtraServer.cabal  exampleStrings
XtraServer/app/: Api.hs  Main.hs  Trace.hs
docs/: About Tracr.md  MonadState.md  index.html
server/: server.cabal
server/dist-newstyle/cache/: config
www/: elm.js  index.html
www/js/: PortFunnel.js  elm.js
www/js/PortFunnel/: LocalStorage.js
