cabal-version:      2.4
name:               XtraServer
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Simple web server interface that generates Xtra traces

-- A longer description of the package.
description:        Backend server component for an Xtra-UI system that accepts web requests, generating an Xtra trace from an input program and filters.

-- A URL where users can report bugs.
bug-reports:        https://github.com/Barnesjt/xtra-backend/issues

-- The license under which the package is released.
-- license:
author:             Jack Barnes
maintainer:         barnesjt05@gmail.com

-- A copyright notice.
copyright:          2021 Jack Barnes
-- category:
extra-source-files: CHANGELOG.md

executable server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Api
        Trace

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.7 && <5,
        servant,
        servant-server,
        aeson,
        string-conversions,
        attoparsec,
        bytestring,
        wai,
        warp,
        time,
        text,
        mtl,
        Xtra,
        fgl,
        graphviz,
        containers,
        parsec >=3.1 && <4
    hs-source-dirs:   app
    default-language: Haskell2010
